# pref

./: .gitignore  CLAUDE.md  README.md  blackify.bat  build.bat  make_venv.bat  mypy.ini  pyproject.toml  requirements-dev.txt  run_flake8.bat  setup.py
.github/workflows/: ci.yml
examples/: pref_example.py
pref/: __init__.py  __version__.py  pref.py
scripts/: blackify.bat  make_venv_dev.bat  pypi.bat  run_flake8.bat  run_mypy.bat
test_pref/: __init__.py  conftest.py  test_pref.py  test_pref_close_and_context_manager.py  test_pref_file_name_default.py  test_pref_non_none.py  test_pref_ordered_set_exists.py  test_pref_ordered_set_mutators.py  test_pref_simple.py  test_pref_store.py  test_pref_tables_clear_reset.py  test_pref_user_provided_file_name.py
