[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pref"
description = "persistent preferences store to local sqlite"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "abel", email = "j@abel.co" }]
keywords = ["preferences", "sqlite", "persistent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlitedict",
    "attrs",
    "appdirs",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jamesabel/pref"
Repository = "https://github.com/jamesabel/pref"

[tool.setuptools]
packages = ["pref"]

[tool.setuptools.package-data]
pref = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "pref.__version__.__version__" }
